Fix overflow with grid spacing instead of overflow

--- a/operator_ui/src/index.css
+++ b/operator_ui/src/index.css
@@ -8,6 +8,5 @@ body {
 #root {
   height: 100%;
   min-height: 100%;
-  overflow-x: hidden;
   overflow-y: auto !important;
 }
